// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Header Transparent Background 1`] = `
<div
  className="sc-dxgOiQ fIyGHW"
  onMouseLeave={[Function]}
>
  <div
    className="sc-htpNat ksANEs"
  >
    <div
      className="sc-bxivhb bLRHtd"
    >
      <ul
        className="sc-ifAKCX fdVqfR"
      >
        <li
          className="sc-EHOje cTDRra"
        >
          <a
            href="https://whatson.bfi.org.uk/Online/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Buy tickets
          </a>
        </li>
        <li
          className="sc-EHOje cTDRra"
        >
          <a
            href="https://player.bfi.org.uk/"
            rel="noopener noreferrer"
            target="_blank"
          >
            BFI Player
          </a>
        </li>
        <li
          className="sc-EHOje cTDRra"
        >
          <a
            href="/"
            rel="noopener noreferrer"
          >
            Become a member
          </a>
        </li>
      </ul>
    </div>
  </div>
  <header
    className="sc-ckVGcZ bGtfwy"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="sc-jKJlTe iFzFtw"
    >
      <a
        aria-current="page"
        className="sc-eNQAEJ hUxsts"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-hMqMXs dFmhos"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-fjdhpX eqtoOA"
      >
        <ul
          className="sc-jzJRlG kvxIqi"
        >
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-kAzzGY kSFAtW"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              role="menuitem"
            >
              Watch
            </a>
          </li>
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              aria-haspopup="true"
              className="sc-kAzzGY ZuCgF"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              role="menuitem"
            >
              Discover
            </a>
          </li>
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              aria-haspopup="true"
              className="sc-kAzzGY ZuCgF"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              role="menuitem"
            >
              Industry
            </a>
          </li>
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              aria-haspopup="true"
              className="sc-kAzzGY ZuCgF"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              role="menuitem"
            >
              Learn
            </a>
          </li>
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              aria-haspopup="true"
              className="sc-kAzzGY ZuCgF"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              role="menuitem"
            >
              About
            </a>
          </li>
          <li
            className="sc-cSHVUG gqOBkD"
          >
            <a
              aria-haspopup="true"
              className="sc-kAzzGY ZuCgF"
              hovered={false}
              href="/#"
              isWhite={true}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              role="menuitem"
            >
              Join
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-jTzLTM ehMPIt"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-VigVT hLIOJs"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-bdVaJa cpKyYQ"
      >
        <img
          alt=""
          className="sc-bwzfXH cWNFVp"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>
</div>
`;

exports[`Storyshots Header With Demo Data 1`] = `
<div
  className="sc-chPdSV bOuyQS"
>
  <header
    className="sc-kgoBCf bzEBYs"
    onMouseLeave={[Function]}
  >
    <div
      className="sc-kGXeez izHSIQ"
    >
      <a
        aria-current="page"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="British Film Institute"
          className="sc-kpOJdX bndQFl"
          src="test-file-stub"
        />
      </a>
      <nav
        className="sc-gZMcBi goqrhZ"
      >
        <ul
          className="sc-gqjmRU kJnFWp"
        >
          <li
            className="sc-VigVT gxwVyq"
          >
            <a
              active={true}
              aria-haspopup="true"
              className="sc-jTzLTM kMVYib"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              role="menuitem"
            >
              Watch
            </a>
          </li>
          <li
            className="sc-VigVT gxwVyq"
          >
            <a
              aria-haspopup="true"
              className="sc-jTzLTM exNXsv"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              role="menuitem"
            >
              Explore
            </a>
          </li>
          <li
            className="sc-VigVT gxwVyq"
          >
            <a
              aria-haspopup="true"
              className="sc-jTzLTM exNXsv"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              role="menuitem"
            >
              Make
            </a>
          </li>
          <li
            className="sc-VigVT gxwVyq"
          >
            <a
              aria-haspopup="true"
              className="sc-jTzLTM exNXsv"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              role="menuitem"
            >
              Education
            </a>
          </li>
          <li
            className="sc-VigVT gxwVyq"
          >
            <a
              aria-haspopup="true"
              className="sc-jTzLTM exNXsv"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              role="menuitem"
            >
              About
            </a>
          </li>
          <li
            className="sc-VigVT gxwVyq"
          >
            <a
              aria-haspopup="true"
              className="sc-jTzLTM exNXsv"
              hovered={false}
              href="/#"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              role="menuitem"
            >
              Support
            </a>
          </li>
        </ul>
      </nav>
      <button
        aria-controls="menu-panel"
        aria-expanded="false"
        className="sc-iwsKbI fROsfM"
        onClick={[Function]}
      >
        Menu
        <div
          className="sc-dnqmqq eRJgxh"
          open={false}
        >
          <div />
        </div>
      </button>
      <button
        className="sc-bdVaJa iySLTE"
      >
        <img
          alt=""
          className="sc-bwzfXH cWNFVp"
          src="test-file-stub"
        />
        Search
      </button>
    </div>
  </header>
</div>
`;
